[project]
name = "gui-library"
version = "0.1.0"
description = ""
authors = [
    {name = "dbruce-ae05",email = "dbruce.ae05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)",
    "polars (>=1.35.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "gui_library", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
